# Telegram-bot-Notify

./: Makefile  README.md  __main__.py  bot.py  pyproject.toml  requirements.txt  timetable.py
app/: config_reader.py  dataBase.py  data_base.py  date_converter.py
app/data_scripts/: bot_data_base_connector.py  config_reader.py  reminders_data.py
app/handlers/: admin.py  commands.py  common.py  edit_reminder.py  errors.py  message.py  text.py
app/logic/: date_converter.py  search_engine.py
bot/: __main__.py  keyboards.py  send_reminders.py
bot/db/: connector.py  protection.py  reminders.py  users.py
bot/handlers/: admin.py  client.py  common.py  delete_reminder.py  edit_reminder.py  errors.py  list_of_reminders.py  message.py  messages.py  report.py  settings.py  show_reports.py
bot/logic/: date_converter.py  search_engine.py
config/: bot.ini  config_reader.py  configuration.py
data/: archived_reports.txt  blocked_users.txt  bot.db  bot_data_base.db  notifications.json  reminders.json  reports.txt
