[tool.poetry]
name = "telegram-bot-notify"
version = "0.1.0"
description = ""
authors = ["Fobos <95380054+Yastrah@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "telegram_bot_notify"}]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.25.1"
schedule = "^1.2.0"
python-dotenv = "^1.0.0"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
